Enhance security analysis for Phoenix activation daemon
Added detailed analysis and recommendations for securing the Phoenix activation daemon and group JVMs against various attack vectors, including policy configuration and permission management.